Update ResourceManager.java